--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "consolidate": "^0.15.1",
     "download-git-repo": "^3.0.2",
+    "ejs": "^3.1.2",
     "ini": "^1.3.5",
     "inquirer": "^7.1.0",
+    "metalsmith": "^2.3.0",
+    "ncp": "^2.0.0",
     "ora": "^4.0.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
