--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wdian-cli",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "chalk": "^4.0.0",
     "commander": "^5.1.0",
     "consolidate": "^0.15.1",
+    "del": "^5.1.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.2",
     "ini": "^1.3.5",
